Modifications in files.

--- a/Basics/Flow_Control.ipynb
+++ b/Basics/Flow_Control.ipynb
@@ -439,6 +439,180 @@
     "else:\n",
     "    print(\"Loop completed.\")"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a Python program to find the length of the longest substring without repeating characters in a given string.\n",
+    "Write a Python program to find the most occurring character and its count in a given string.\n",
+    "Write a Python program to reverse a given string word by word.\n",
+    "Write a Python program to find the first and last occurrence of a given substring in a given string.\n",
+    "Write a Python program to capitalize the first and last character of each word in a given string.\n",
+    "* Write a Python program to count the number of vowels and consonants in a given string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "String is not palindrome.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to check if a given string is a palindrome or not.\n",
+    "str = input(\"Enter a string:\")\n",
+    "def palindrome(str):\n",
+    "    if str == str[::-1]:\n",
+    "        print(\"Yes string is palindrome.\")\n",
+    "    else:\n",
+    "        print(\"String is not palindrome.\")\n",
+    "palindrome(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'T': 1, 'h': 2, 'i': 4, 's': 5, ' ': 5, 't': 4, 'r': 3, 'n': 5, 'g': 2, 'c': 4, 'a': 2, 'e': 4, 'o': 1, 'u': 1, '.': 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to count the number of characters (character frequency) in a string.\n",
+    "str = 'This is string characters counting sentence.'\n",
+    "\n",
+    "def char_count(str):\n",
+    "    count = {} # Empty dictionary\n",
+    "    for i in str: # Iterating through string\n",
+    "        if i in count: # Checking if character is already present in dictionary\n",
+    "            count[i] += 1 # If present then incrementing the count\n",
+    "        else: # If not present then adding it to dictionary\n",
+    "            count[i] = 1 # Initializing the count to 1\n",
+    "    print(count)\n",
+    "char_count(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "z\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to find the first non-repeating character in a given string.\n",
+    "str = 'this is string characters counting sentence.'\n",
+    "\n",
+    "def first_non_repeating_char(str):\n",
+    "    count = {} # Empty dictionary\n",
+    "    for i in str: # Iterating through string\n",
+    "        if i not in count: # Checking if character is already present in dictionary\n",
+    "            count[i] = 1 # If not present then adding it to dictionary and initializing the count to 1\n",
+    "        else: # If present then incrementing the count\n",
+    "            count[i] += 1\n",
+    "    for i in str: # Iterating through string\n",
+    "        if count[i] == 1: # Checking if count of character is 1\n",
+    "            print(i) # Printing the character\n",
+    "            break # Breaking the loop\n",
+    "first_non_repeating_char(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "his is sring characers couning senence.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to remove all occurrences of a specified character from a given string.\n",
+    "str = 'tthis is string characters counting sentence.'\n",
+    "\n",
+    "char = input(\"Enter a character\")\n",
+    "for i in str:\n",
+    "    if char == i:\n",
+    "        str = str.replace(char,'')\n",
+    "print(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "his is sring characers couning senence.\n"
+     ]
+    }
+   ],
+   "source": [
+    "str = 'this is string characters counting sentence.'\n",
+    "char = input(\"Enter a character\")\n",
+    "while char in str:\n",
+    "    str = str.replace(char,'')\n",
+    "print(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "ce.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to find the length of the longest substring without repeating characters in a given string.\n",
+    "str = 'this is string characters counting sentence.'\n",
+    "\n",
+    "def longest_substring(str):\n",
+    "    count = 0\n",
+    "    max_count = 0\n",
+    "    for i in range(len(str)):\n",
+    "        if str[i] not in str[i+1:]:\n",
+    "            count += 1\n",
+    "        else:\n",
+    "            if count > max_count:\n",
+    "                max_count = count\n",
+    "            count = 0\n",
+    "    print(max_count)\n",
+    "    print(str[i-max_count+1:i+1])\n",
+    "longest_substring(str)"
+   ]
   }
  ],
  "metadata": {
