--- a/Basics/Functions.ipynb
+++ b/Basics/Functions.ipynb
@@ -191,6 +191,30 @@
     "\n",
     "prime(17)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n",
+      "345\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 345 # Global variable\n",
+    "\n",
+    "def foo():\n",
+    "    a = 1000 # Local variable\n",
+    "    print(a)\n",
+    "foo()\n",
+    "print(a)"
+   ]
   }
  ],
  "metadata": {
