--- a/Basics/Fundamentals.ipynb
+++ b/Basics/Fundamentals.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction to Python"
+    "### **Introduction to Python**"
    ]
   },
   {
@@ -15,8 +15,8 @@
     "tags": []
    },
    "source": [
-    "### Q1. What is computer science\n",
-    "#### Ans: When any real life problem is solved using computer is called as computer science."
+    "1. What is computer science\n",
+    "* When any real life problem is solved using computer is called as computer science."
    ]
   },
   {
@@ -24,8 +24,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q2. What does a good programming needs?\n",
-    "#### Ans: A good programming requires the ability to see big picture while paying attention to minute details."
+    "2. What does a good programming needs?\n",
+    "* A good programming requires the ability to see big picture while paying attention to minute details."
    ]
   },
   {
@@ -33,8 +33,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q3. What is syntax?\n",
-    "#### Ans: A set of rules that define a what sequence of characters or symbols constitute a well-formed string."
+    "3. What is syntax?\n",
+    "* A set of rules that define a what sequence of characters or symbols constitute a well-formed string."
    ]
   },
   {
@@ -42,8 +42,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q4. What are semantics?\n",
-    "#### Ans: Semantics deals with which well-formed string has a meaning and what that meaning is."
+    "4. What are semantics?\n",
+    "* Semantics deals with which well-formed string has a meaning and what that meaning is."
    ]
   },
   {
@@ -51,8 +51,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q5. What is Token?\n",
-    "#### Ans: Token is a single or smallest element of programming language also known as lexical unit."
+    "5. What is Token?\n",
+    "+ Token is a single or smallest element of programming language also known as lexical unit."
    ]
   },
   {
@@ -60,11 +60,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q6. What are Keywords?\n",
-    "#### Ans: Keywords are the reserved words having a special meaning. \n",
-    "#### Eg. ['False', 'None','True', '__peg_parser__', 'and', 'as', 'assert', 'async', 'await', 'break', 'class',\n",
-    "#### 'continue', 'def', 'del', 'elif', 'else', 'except','finally', 'for', 'from', 'global', 'if', 'import',\n",
-    "#### 'in', 'is', 'return', 'try', 'while', 'with', 'yield']"
+    "6. What are Keywords?\n",
+    "* Keywords are the reserved words having a special meaning. \n",
+    "* Eg. ['False', 'None','True', '__peg_parser__', 'and', 'as', 'assert', 'async', 'await', 'break', 'class',\n",
+    "* 'continue', 'def', 'del', 'elif', 'else', 'except','finally', 'for', 'from', 'global', 'if', 'import',\n",
+    "* 'in', 'is', 'return', 'try', 'while', 'with', 'yield']"
    ]
   },
   {
@@ -128,14 +128,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q7. What are Literals?\n",
-    "#### Ans: Literals are constants that doesn't change their values over the time of execution.\n",
-    "#### Types of Literals\n",
-    "#### 1. Boolean Literals: TRUE, FALSE\n",
-    "#### 2. Numeric Literals: int, float, complex\n",
-    "#### 3. Special Literals: None\n",
-    "#### 4. String Literals: Anything that is written inside ' ' is a string literal.\n",
-    "#### 5. Literals collection: List, Tuples, Sets, Dict."
+    "7. What are Literals?\n",
+    "* Literals are constants that doesn't change their values over the time of execution.\n",
+    "* Types of Literals\n",
+    "    1. Boolean Literals: TRUE, FALSE\n",
+    "    2. Numeric Literals: int, float, complex\n",
+    "    3. Special Literals: None\n",
+    "    4. String Literals: Anything that is written inside ' ' is a string literal.\n",
+    "    5. Literals collection: List, Tuples, Sets, Dict."
    ]
   },
   {
@@ -143,10 +143,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q8. What are Punctuators?\n",
-    "#### Ans: Parentheses: (), Brackets: [], Braces: {}, Period: . , Comma: \",\", Colon: :, Semicolon: ;, Backslash: \\, Plus sign: +\n",
-    "#### Minus sign: -, Asterisk: *, Forward slash: /, Percent sign: %, Caret: ^, Ampersand: &, Pipe: |, Tilde: ~, Less than: <, Greater than: >\n",
-    "#### Equals: =, Exclamation point: !, Question mark: ?, At sign: @ ."
+    "8. What are Punctuators?\n",
+    "* Parentheses: (), Brackets: [], Braces: {}, Period: . , Comma: \",\", Colon: :, Semicolon: ;, Backslash: \\, Plus sign: +\n",
+    "* Minus sign: -, Asterisk: *, Forward slash: /, Percent sign: %, Caret: ^, Ampersand: &, Pipe: |, Tilde: ~, Less than: <, Greater than: >\n",
+    "* Equals: =, Exclamation point: !, Question mark: ?, At sign: @ ."
    ]
   },
   {
@@ -154,8 +154,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q9. What is Datatype?\n",
-    "#### Ans: It is a classification that identifies which type of value a data has."
+    "9. What is Datatype?\n",
+    "* It is a classification that identifies which type of value a data has."
    ]
   },
   {
@@ -163,12 +163,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q10. What are different built-in datatypes?\n",
-    "#### Ans: 1. Boolean Datatype: TRUE, FALSE\n",
-    "#### 2. Numeric Datatype: Int, float, complex numbers\n",
-    "#### 3. Sequences Datatype: Str, List, tuple, dict, sets, bytes, bytearray\n",
-    "#### 4. Sets Datatype: Sets, Frozenset\n",
-    "#### 5. Mappings: Dictionary"
+    "10. What are different built-in datatypes?\n",
+    "* Boolean Datatype: TRUE, FALSE\n",
+    "* Numeric Datatype: Int, float, complex numbers\n",
+    "* Sequences Datatype: Str, List, tuple, dict, sets, bytes, bytearray\n",
+    "* Sets Datatype: Sets, Frozenset\n",
+    "* Mappings: Dictionary"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Numeric data types"
+    "* Numeric data types"
    ]
   },
   {
@@ -233,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Sequence data types"
+    "* Sequence data types"
    ]
   },
   {
@@ -291,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Sets datatypes"
+    "* Sets datatypes"
    ]
   },
   {
@@ -323,7 +323,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Mappings Datatype"
+    "* Mappings Datatype"
    ]
   },
   {
@@ -350,9 +350,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Q8. What are Operators?\n",
-    "#### Ans: Operators are the symbols that carryout computation.\n",
-    "#### 1. Arithmetic operators: [+, -, *, **, /, //, %]"
+    "8. What are Operators?\n",
+    "* Operators are the symbols that carryout computation.\n",
+    "1. Arithmetic operators: [+, -, *, **, /, //, %]"
    ]
   },
   {
@@ -475,13 +475,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. Conditional or Relational operators: [>, >=, <, <=]\n",
-    "#### 3. Equality operators: [==, !=]\n",
-    "#### Note:\n",
-    "##### a. Output is always a Boolean Value\n",
-    "##### b. If the type of data is not same, TypeError will be raised.\n",
-    "##### c. It is not applicable to complex numbers or dictionary.\n",
-    "##### d. Chaining is possible but the output will be True if all conditions are True.  "
+    "2. Conditional or Relational operators: [>, >=, <, <=]\n",
+    "3. Equality operators: [==, !=]\n",
+    "\n",
+    "**Note**:\n",
+    "* Output is always a Boolean Value\n",
+    "* If the type of data is not same, TypeError will be raised.\n",
+    "* It is not applicable to complex numbers or dictionary.\n",
+    "* Chaining is possible but the output will be True if all conditions are True.  "
    ]
   },
   {
@@ -633,9 +634,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 4. Logical operators:- [ and, or, not]\n",
-    "##### AND operator rules:\n",
-    "##### 1. If both the operands are False Values [0, 0.0, False, '', 0 + 0j, 0 + 0.0j] then the output will be First operand of the expression. "
+    "4. Logical operators:- [ and, or, not]\n",
+    "* AND operator rules:\n",
+    "1. If both the operands are False Values [0, 0.0, False, '', 0 + 0j, 0 + 0.0j] then the output will be First operand of the expression. "
    ]
   },
   {
@@ -704,7 +705,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2. If both the operands are True Values [any int, any float, any str, any complex number] then the output will be Second operand of the expression."
+    "2. If both the operands are True Values [any int, any float, any str, any complex number] then the output will be Second operand of the expression."
    ]
   },
   {
@@ -792,7 +793,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3. If one of the operand is False value then output will be False value"
+    "3. If one of the operand is False value then output will be False value"
    ]
   },
   {
@@ -880,7 +881,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### OR operator"
+    "#### **OR operator**"
    ]
   },
   {
@@ -888,8 +889,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Rules:\n",
-    "##### 1. If both the operands are False Values [0, 0.0, False, '', 0 + 0j, 0 + 0.0j] then the output will be Second operand of the expression."
+    "* Rules:\n",
+    "1. If both the operands are False Values [0, 0.0, False, '', 0 + 0j, 0 + 0.0j] then the output will be Second operand of the expression."
    ]
   },
   {
@@ -958,7 +959,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 2. If both the operands are True Values then the output will be First operand of the expression."
+    "2. If both the operands are True Values then the output will be First operand of the expression."
    ]
   },
   {
@@ -1026,7 +1027,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 3. If one of the operands are True Values then the output will be True operand of the expression."
+    "3. If one of the operands are True Values then the output will be True operand of the expression."
    ]
   },
   {
@@ -1094,8 +1095,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### NOT operator: Always inverts the result but always returns boolean value.\n",
-    "##### It always works with one value"
+    "#### **NOT operator:** Always inverts the result but always returns boolean value.\n",
+    "* It always works with one value"
    ]
   },
   {
@@ -1183,13 +1184,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 5. Bitwise operators:- \n",
-    "###### '&': Bitwise AND, If both bit are 1 output will be 1, else 0\n",
-    "###### '|': Bitwise OR, If one of the bit is 1 output is 1, If both bit are 0 output will be 0\n",
-    "###### '~': Bitwise NOR or Compliment\n",
-    "###### '^': Bitwise XOR, If one of the bit is 1 output will be 1, if both are same output is 0.\n",
-    "###### '<<': Left shift\n",
-    "###### '>>': Right shift"
+    "5. Bitwise operators:- \n",
+    "* '&': Bitwise AND, If both bit are 1 output will be 1, else 0\n",
+    "* '|': Bitwise OR, If one of the bit is 1 output is 1, If both bit are 0 output will be 0\n",
+    "* '~': Bitwise NOR or Compliment\n",
+    "* '^': Bitwise XOR, If one of the bit is 1 output will be 1, if both are same output is 0.\n",
+    "* '<<': Left shift\n",
+    "* '>>': Right shift"
    ]
   },
   {
@@ -1314,10 +1315,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 6. Assignment Operators:- is assigning literal or expression on its right, to variable to its left.\n",
-    "#### These are categorised into two types:\n",
-    "##### a. Simple assignment operators: [=]\n",
-    "##### b. Advanced assignment operators: [ +=, -=, /=, //=, *=, **=, %=, &=, |=, ^=, >>=, <<= ]"
+    "6. Assignment Operators:- is assigning literal or expression on its right, to variable to its left.\n",
+    "* These are categorised into two types:\n",
+    "    * Simple assignment operators: [=]\n",
+    "    * Advanced assignment operators: [ +=, -=, /=, //=, *=, **=, %=, &=, |=, ^=, >>=, <<= ]"
    ]
   },
   {
@@ -1504,12 +1505,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Special operators:\n",
-    "##### There are two types of special operators\n",
-    "##### 1. Identity operators: [is, is not]\n",
-    "#####   a. is: is will return True if both operands are pointing to some object.\n",
-    "#####   b. is not: is not will return True if both operands are not same internally.\n",
-    "##### 2. Membership operators: [in, not in], checks whether the sub-sequence is present in the given sequence [list, tuple, str, bytes, bytearray]"
+    "### **Special operators:**\n",
+    "* There are two types of special operators\n",
+    "    1. Identity operators: [is, is not]\n",
+    "        * is: is will return True if both operands are pointing to some object.\n",
+    "        * is not: is not will return True if both operands are not same internally.\n",
+    "    2. Membership operators: [in, not in], checks whether the sub-sequence is present in the given sequence [list, tuple, str, bytes, bytearray]"
    ]
   },
   {
