--- a/Basics/List.ipynb
+++ b/Basics/List.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Creating a list object:\n",
+    "### **1. Creating a list object:**\n",
     "* 1. Empty list object:\n",
     "    * l1 = []\n",
     "    * l2 = list()\n",
@@ -120,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Important functions / methods\n",
+    "### **2. Important functions / methods**\n",
     "* len(): returns total number of elements in list.\n",
     "* count(): returns total number of occurences of given element.\n",
     "* index(): returns index of first occurence of given element."
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Manupulating list elements\n",
+    "### **3. Manupulating list elements**\n",
     "* append(): adds element at the end of list.\n",
     "* insert(): adds element at given index.   \n",
     "* extend(): adds elements of given list at the end of another list.\n",
@@ -310,7 +310,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Ordering elements:-\n",
+    "### **4. Ordering elements:-**\n",
     "* sort(): sorts elements in ascending order.\n",
     "    * For alphabets: A-Z, a-z, 0-9, special characters.\n",
     "    * sort(reverse=True): sorts elements in descending order.\n",
@@ -403,7 +403,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Aliasing and cloning or deep copy of list\n",
+    "### **5. Aliasing and cloning or deep copy of list**\n",
     "* Aliasing: is a process of creating a new name for existing object.\n",
     "* Cloning: is a process of creating a new object with same elements as existing object."
    ]
@@ -458,7 +458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 6. List comparsion: Comparing two lists."
+    "### **6. List comparsion:** Comparing two lists."
    ]
   },
   {
@@ -486,7 +486,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7. List membership: Checking whether an element is present in list or not."
+    "### **7. List membership:** Checking whether an element is present in list or not."
    ]
   },
   {
@@ -513,7 +513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 8. List comprehension: Creating a list from another list."
+    "### **8. List comprehension:** Creating a list from another list."
    ]
   },
   {
@@ -540,7 +540,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 9. Nested list: List of lists."
+    "### **9. Nested list: List of lists.**"
    ]
   },
   {
