--- a/Basics/Object_reusability_&_immutability.ipynb
+++ b/Basics/Object_reusability_&_immutability.ipynb
@@ -419,16 +419,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Input Statement:\n",
-    "##### input() function: It always returns string data.\n",
-    "##### >> In python 2 we have 2 input functions, input() & raw_input().\n",
-    "##### >> In python 3 we have only one input() function.\n",
+    "### **Input Statement:**\n",
+    "##### 1. input() function: It always returns string data.\n",
+    "* In python 2 we have 2 input functions, input() & raw_input().\n",
+    "* In python 3 we have only one input() function.\n",
     "\n",
-    "###### >> input(): This function takes input from the user as a string, and it is evaluated as a Python expression. It is important to note that this function can be unsafe, especially if used with untrusted user input, as it can execute arbitrary code. Therefore, it is recommended to use raw_input() instead.\n",
+    "1. input(): This function takes input from the user as a string, and it is evaluated as a Python expression. It is important to note that this function can be unsafe, especially if used with untrusted user input, as it can execute arbitrary code. Therefore, it is recommended to use raw_input() instead.\n",
     "\n",
-    "###### >> raw_input(): This function takes input from the user as a string, and it does not evaluate it as a Python expression. It is safe to use, as it does not execute arbitrary code.\n",
+    "2. raw_input(): This function takes input from the user as a string, and it does not evaluate it as a Python expression. It is safe to use, as it does not execute arbitrary code.\n",
     "\n",
-    "###### >> sys.stdin.readline(): This function reads input from the standard input stream (stdin) as a string, and it can be used to take input from the user or from a file. It is more efficient than raw_input() for large inputs."
+    "3. sys.stdin.readline(): This function reads input from the standard input stream (stdin) as a string, and it can be used to take input from the user or from a file. It is more efficient than raw_input() for large inputs."
    ]
   },
   {
@@ -476,7 +476,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Output functions: print() is an output function which is used to print data on the screen."
+    "#### **Output functions:** print() is an output function which is used to print data on the screen."
    ]
   },
   {
@@ -484,7 +484,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Types of print() function"
+    "##### **Types of print() function**"
    ]
   },
   {
@@ -653,18 +653,6 @@
     "print(f\"Sum of {num1} and {num2} is {num1+num2}\")\n",
     "print(f\"Difference between {num1} and {num2} is {num1 - num2}\")\n",
     "print(f\"Product of {num1} and {num2} is {num1 * num2}\")"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### FLow Control / Control Flow\n",
-    "#### If we have multiple statements, which statement will be executed first at runtime is decided by the flow control.\n",
-    "#### 1. Conditional statements\n",
-    "#### 2. Iterative statements \n",
-    "#### 3. Transfer statements"
    ]
   }
  ],
