--- a/Basics/Precedence_rule.ipynb
+++ b/Basics/Precedence_rule.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Precedence Rule"
+    "#### **Precedence Rule**"
    ]
   },
   {
@@ -13,22 +13,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. () parenthesis\n",
-    "#### 2. ** exponrntial\n",
-    "#### 3. ~ bitwise not, - unary minus\n",
-    "#### 4. *, /, %, //\n",
-    "#### 5. +, -\n",
-    "#### 6. <<, >> left shift, right shift\n",
-    "#### 7. & bitwise and\n",
-    "#### 8. ^ bitwise XOR\n",
-    "#### 9. | bitwise OR\n",
-    "#### 10. <, >, >=, <=, ==, !=\n",
-    "#### 11. =, +=, -=, /=, //=, *=, **=, %=, &=, |=, ^=, >>=, <<=\n",
-    "#### 12. is, is not\n",
-    "#### 13. in, not in\n",
-    "#### 14. not\n",
-    "#### 15. and\n",
-    "#### 16. or"
+    "1. () parenthesis\n",
+    "2. ** exponrntial\n",
+    "3. ~ bitwise not, - unary minus\n",
+    "4. *, /, %, //\n",
+    "5. +, -\n",
+    "6. <<, >> left shift, right shift\n",
+    "7. & bitwise and\n",
+    "8. ^ bitwise XOR\n",
+    "9. | bitwise OR\n",
+    "10. <, >, >=, <=, ==, !=\n",
+    "11. =, +=, -=, /=, //=, *=, **=, %=, &=, |=, ^=, >>=, <<=\n",
+    "12. is, is not\n",
+    "13. in, not in\n",
+    "14. not\n",
+    "15. and\n",
+    "16. or"
    ]
   }
  ],
