--- a/Basics/Slicing.ipynb
+++ b/Basics/Slicing.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Indexing & Slicing"
+    "## **Indexing & Slicing**"
    ]
   },
   {
@@ -13,13 +13,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1. What is indexing?\n",
-    "#### Ans: Indexing is a process of accessing elements.\n",
+    "1. What is indexing?\n",
+    "* Indexing is a process of accessing elements.\n",
     "\n",
-    "##### Types of Index\n",
-    "##### 1. Positive Index: It is being used to access elements from left to right. Postive index starts from 0 & ends at n-1.\n",
-    "##### 2. Negative Index: It is being used to access elements from right to left. Negative index starts from -1 & ends at -n.\n",
-    "##### Note: Indexing is applicable only on sequences. "
+    "2. Types of Index:\n",
+    "    1. Positive Index: It is being used to access elements from left to right. Postive index starts from 0 & ends at n-1.\n",
+    "    2. Negative Index: It is being used to access elements from right to left. Negative index starts from -1 & ends at -n.\n",
+    "* Note: Indexing is applicable only on sequences. "
    ]
   },
   {
@@ -68,17 +68,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What is slicing ?\n",
-    "##### Ans: When a piece of object is separated from a whole object it is called slicing.\n",
+    "1. What is slicing ?\n",
+    "* When a piece of object is separated from a whole object it is called slicing.\n",
     "\n",
-    "#### Slicing operator: It returns sub sequence. \n",
-    "#### Types of slicing operator:\n",
-    "##### 1. seq[Begin : End]\n",
-    "##### Rules: Both begin and end are optional. Step is counted as +1 default. End = end - 1. It will move from left to right. End should not be zero(0).\n",
-    "##### 2. seq[Begin : End : Step]\n",
-    "##### Rules: \n",
-    "##### 1. +ve step value: It will move from left to right. End = end - 1, End should not be 0. End_index values should always be choosen from right side of begin index value.\n",
-    "##### 2. -ve step value: It will move from right to left. End = end + 1, End should not be -1. End_index values should always be choosen from left side of begin index value."
+    "#### **Slicing operator:** It returns sub sequence. \n",
+    "#### **Types of slicing operator:**\n",
+    "1. seq[Begin : End]\n",
+    "* Rules: Both begin and end are optional. Step is counted as +1 default. End = end - 1. It will move from left to right. End should not be zero(0).\n",
+    "2. seq[Begin : End : Step]\n",
+    "* Rules: \n",
+    "    1. +ve step value: It will move from left to right. End = end - 1, End should not be 0. End_index values should always be choosen from right side of begin index value.\n",
+    "    2. -ve step value: It will move from right to left. End = end + 1, End should not be -1. End_index values should always be choosen from left side of begin index value."
    ]
   },
   {
