--- a/Basics/range_function.ipynb
+++ b/Basics/range_function.ipynb
@@ -5,14 +5,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Range is function which generates range of integers.\n",
-    "#### Type of range functions:\n",
-    "#### 1. range(end): This will generate integers from 0 to (end-1), step is + 1. End should not be 0 or less than 0 or else it will return nothing.\n",
-    "#### 2. range(begin, end): This will generate integers from Begin to (end-1), step is +1.\n",
-    "#### 3. range(begin, end, step): \n",
-    "#### Rules: \n",
-    "#### a) If step is +ve we are moving from left to right. End should not be smaller or equal to begin. End = End - 1.\n",
-    "#### b) If step is -ve we are moving frm right to left. End = End + 1, End should always be > than begin."
+    "#### **Range**: is function which generates range of integers.\n",
+    "* Type of range functions:\n",
+    "    1. range(end): This will generate integers from 0 to (end-1), step is + 1. End should not be 0 or less than 0 or else it will return nothing.\n",
+    "    2. range(begin, end): This will generate integers from Begin to (end-1), step is +1.\n",
+    "    3. range(begin, end, step): \n",
+    "\n",
+    "* Rules: \n",
+    "    1. If step is +ve we are moving from left to right. End should not be smaller or equal to begin. End = End - 1.\n",
+    "    2. If step is -ve we are moving frm right to left. End = End + 1, End should always be > than begin."
    ]
   },
   {
