--- a/Basics/List.ipynb
+++ b/Basics/List.ipynb
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -560,6 +560,237 @@
     "# Nested list\n",
     "lst = [[1,2,3],[4,5,6],[7,8,9]]\n",
     "print(lst[2][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', [1, 2, 2, [23, 45, 67]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to create a nested list.\n",
+    "lst = ['a']\n",
+    "nst_list = [1,2,2, [23,45,67]]\n",
+    "lst.append(nst_list)\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to create a list of even numbers using list comprehension.\n",
+    "lst = [i for i in range(20) if i%2 == 0]\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to remove duplicate elements from a list.\n",
+    "lst = [1,2,3,4,5,6,7,8,9,1,2,3,4,5,6,7,8,9]\n",
+    "new_list = []\n",
+    "\n",
+    "for element in lst:\n",
+    "    if element not in new_list:\n",
+    "        new_list.append(element)\n",
+    "print(new_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['z', 'a', 'Z', 'B', 'A']\n",
+      "[1213, 309, 22, 4, 4, 3, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to sort a list in descending order.\n",
+    "lst = ['a','A','B','Z','z']\n",
+    "print(sorted(lst,reverse=True))\n",
+    "\n",
+    "lst2 = [1,22,3,309,4,1213,4]\n",
+    "print(sorted(lst2,reverse=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['z', 'Z', 'B', 'A', 'a']\n",
+      "['z', 'Z', 'B', 'A', 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to reverse a list.\n",
+    "lst = ['a','A','B','Z','z']\n",
+    "print(lst[::-1])\n",
+    "lst.reverse()\n",
+    "print(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to find the second largest number in a list.\n",
+    "lst = [33,55,6785,89,90,6]\n",
+    "\n",
+    "def sd_largest_ele(lst):\n",
+    "    lst.sort(reverse=True)\n",
+    "    snd_larg = lst[1]\n",
+    "    print(snd_larg)\n",
+    "\n",
+    "sd_largest_ele(lst)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No both the given lista are different\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to check if two lists are equal.\n",
+    "def list_equality(lst1,lst2):\n",
+    "    if lst1 == lst2:\n",
+    "        print(\"Yes both the given lista are equal\")\n",
+    "    else:\n",
+    "       print(\"No both the given lista are different\")\n",
+    "a = [1,2,3,4,5]\n",
+    "b = [1,2,3,4,6]\n",
+    "list_equality(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to remove all the odd numbers from a list.\n",
+    "lst = [i for i in range(10)]\n",
+    "new_list = []\n",
+    "\n",
+    "def remove_odd(lst):\n",
+    "    for num in lst:\n",
+    "        if num % 2 == 0:\n",
+    "            new_list.append(num)\n",
+    "    print(new_list)\n",
+    "remove_odd(lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum of elements of list: 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to find the sum of all the elements in a list.\n",
+    "lst = [i for i in range(10)]\n",
+    "\n",
+    "sum = 0\n",
+    "\n",
+    "for num in lst:\n",
+    "    sum = sum + num\n",
+    "print(\"Sum of elements of list:\",sum)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n",
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Write a Python program to copy a list (both shallow and deep copy).\n",
+    "lst = [i for i in range(10) if i % 2 == 0]\n",
+    "lst2 = lst.copy()\n",
+    "print(lst2)"
    ]
   }
  ],
