--- a/Basics/Decorators_&_Modules.ipynb
+++ b/Basics/Decorators_&_Modules.ipynb
@@ -87,10 +87,70 @@
     }
    ],
    "source": [
+    "# Module Aliasing\n",
     "import mathematics as maths\n",
     "\n",
     "print(maths.sqrt(16))\n",
     "print(maths.square(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Module\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Piyush S More\\AppData\\Local\\Temp\\ipykernel_14264\\1312825934.py:6: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
+      "  import imp\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<module 'mathematics' from 'd:\\\\Lu_Git_Demo\\\\Pythoncodespace\\\\Basics\\\\mathematics.py'>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reloading a module\n",
+    "# import mathematics\n",
+    "# import mathematics\n",
+    "# import mathematics\n",
+    "# This makes no sense calling it again & again because it returns o/p only once so to avoid this\n",
+    "import imp\n",
+    "imp.reload(mathematics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__main__\n"
+     ]
+    }
+   ],
+   "source": [
+    "import mathematics\n",
+    "print(__name__)"
    ]
   }
  ],
