--- a/Python Basics Tutorial/Day11.ipynb
+++ b/Python Basics Tutorial/Day11.ipynb
@@ -69,16 +69,8 @@
     "            inn_lst.append(length)\n",
     "        new_lst.append(inn_lst)\n",
     "\n",
-    "print(new_lst)\n",
-    "    "
+    "print(new_lst)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
